# csgo-demoinfo

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vs19.ps1
Notes/: ---- CSVCMsg_GameEventList (14387 bytes) ---------.txt  Player Entity Properties.txt
demoinfogo/: CMakeLists.txt  README.md  README.txt  bombentity.cpp  bombentity.h  cstrike15_usermessages_public.proto  demofile.cpp  demofile.h  demofilebitbuf.cpp  demofilebitbuf.h  demofiledump.cpp  demofiledump.h  demofilepropdecode.cpp  demofilepropdecode.h  demoinfogo.cpp  demoinfogo.sln  demoinfogo.vcxproj  enums.h  grenadeentity.cpp  grenadeentity.h  make_cc_files.bat  netmessages_public.proto  player.cpp  player.h  playerdeathevent.cpp  playerdeathevent.h  playerhurtevent.cpp  playerhurtevent.h  tickinfo.cpp  tickinfo.h
